# pytest-pudb

./: HISTORY.rst  README.rst  pyproject.toml  pytest_pudb.py
.github/workflows/: ci.yml
src/pytest_pudb/: __init__.py
test/: test_pytest_pudb.py
