[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pytest-pudb"
version = "0.7.0"
description = "Pytest PuDB debugger integration"
readme = "README.rst"
license = "MIT"
authors = [{ name = "Michael Elovskikh", email = "wronglink@gmail.com" }]
maintainers = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest>=2.0",
    "pudb",
]

[project.urls]
Repository = "https://github.com/wronglink/pytest-pudb"

[project.entry-points.pytest11]
pudb = "pytest_pudb"

[tool.ruff]
target-version = "py38"
line-length = 88

preview = true
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # flake8
    "F",   # flake8
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff
    "UP",  # pyupgrade
    "W",   # flake8
]
lint.ignore = [
    "E402",    # module-import-not-at-top-of-file
    "ISC001",  # single-line-implicit-string-concatenation
    "UP037",   # quoted-annotation
]
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pytest", "pudb"]
